# drumkit

./: Makefile.am  configure.ac  semaphore.yml
.circleci/: config.yml
.semaphore/: semaphore.yml
src/: Makefile.am  main.cpp
